--- a/ccsite/layouts/partials/article/components/details.html
+++ b/ccsite/layouts/partials/article/components/details.html
@@ -64,7 +64,6 @@
         {{ if not .Date.IsZero }}
             <div>
                 {{ partial "helper/icon" "date" }}
-                Posted:
                 <time class="article-time--published">
                     {{- .Date.Format (or .Site.Params.dateFormat.published "Jan 02, 2006") -}}
                 </time>
@@ -72,9 +71,9 @@
         {{ end }}
 
         <!-- Created Date -->
-        {{- $pubdate := .PublishDate.Format "Jan 02, 2006" }}
+        <!-- {{- $pubdate := .PublishDate.Format "Jan 02, 2006" }} -->
         <!-- Last Updated Date -->
-        {{- if .Lastmod }}
+        <!-- {{- if .Lastmod }}
             {{ partial "helper/icon" "date" }}
             {{- $lastmod := .Lastmod.Format "Jan 02, 2006" }}
                 {{- if ne $lastmod $pubdate }}
@@ -83,7 +82,15 @@
                         {{ $lastmod }}
                     </time>
             {{- end }}
-        {{- end }}
+        {{- end }} -->
+        {{- if ne .Lastmod .Date -}}
+        <section class="article-lastmod">
+            {{ partial "helper/icon" "clock" }}
+            <span>
+                {{ T "article.lastUpdatedOn" }} {{ .Lastmod.Format ( or .Site.Params.dateFormat.lastUpdated "Jan 02, 2006 15:04 MST" ) }}
+            </span>
+        </section>
+        {{- end -}}
 
         {{ if .Site.Params.article.readingTime }}
             <div>
