--- a/ccsite/themes/hugo-theme-stack/assets/scss/partials/article.scss
+++ b/ccsite/themes/hugo-theme-stack/assets/scss/partials/article.scss
@@ -198,7 +198,9 @@
         .article-time {
             font-size: 1.4rem;
         }
-
+        .article-lastmod {
+            font-size: 1.2rem;
+        }
         .article-preview {
             font-size: 1.4rem;
             color: var(--card-text-color-tertiary);
