--- a/ccsite/themes/hugo-theme-stack/assets/scss/partials/layout/article.scss
+++ b/ccsite/themes/hugo-theme-stack/assets/scss/partials/layout/article.scss
@@ -74,6 +74,7 @@
             .article-copyright,
             .article-lastmod {
                 a {
+                    font-size: 1.4rem;
                     color: var(--body-text-color);
                 }
 
